<resources>
    <string name="app_name">m2i cloud</string>
    <string name="mech">Mechanical</string>
    <string name="explore">Explore</string>
    <string name="it">Information\nTechnology</string>
    <string name="electronics1"><![CDATA[Electronics &\n Telecommunication]]></string>
    <string name="electronics">E.X.T.C</string>
    <string name="comps">Computer</string>
    <string name="civil">Civil</string>
    <string name="automobile">Automobile</string>
    <string name="Mba">M.B.A</string>
    <string name="me">M.E</string>
    <string name="office">Office</string>
    <string name="principal">Principal</string>
    <string name="fy">First Year</string>
    <string name="login">Login</string>
    <string name="username_or_e_mail">Username or E-mail</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password</string>
</resources>
