<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signin"
    android:orientation="vertical"
    android:background="#fff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textSize="30sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat_alternates"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username_or_e_mail"
        android:textSize="20sp"
        android:id="@+id/username"
        android:padding="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:textSize="20sp"
        android:id="@+id/password"
        android:padding="10dp"
        android:password="true"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundbutton"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/login"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat_alternates"
        android:textSize="20sp"
        android:id="@+id/login"
        android:onClick="tohome"
        android:backgroundTint="#42aff5"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/roundbutton"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/register"
        android:textColor="#fff"
        android:textAllCaps="false"
        android:fontFamily="@font/montserrat_alternates"
        android:textSize="20sp"
        android:id="@+id/register"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textColor="#a9a9a9"
        android:layout_gravity="center"
        android:fontFamily="@font/montserrat_alternates"/>



</LinearLayout>