<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#ffffff">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#f50057"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/mech"
                        android:textColor="#000000"
                        android:textSize="25sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundbutton"
                        android:text="@string/explore"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"
                        android:textSize="18sp"
                        android:id="@+id/mechexplore"
                        android:onClick="loadrssact"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#ffab00"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/it"
                        android:textColor="#000000"
                        android:textSize="25sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundbutton"
                        android:text="@string/explore"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"
                        android:textSize="18sp"
                        android:id="@+id/itexplore"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#1de9b6"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/electronics"
                        android:textColor="#000000"
                        android:textSize="25sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundbutton"
                        android:text="@string/explore"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"
                        android:textSize="18sp"
                        android:id="@+id/extcexplore"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#ff5252"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/comps"
                        android:textColor="#000000"
                        android:textSize="25sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundbutton"
                        android:text="@string/explore"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"
                        android:textSize="18sp"
                        android:id="@+id/compsexplore"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#0d47a1"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/civil"
                        android:textColor="#000000"
                        android:textSize="25sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundbutton"
                        android:text="@string/explore"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"
                        android:textSize="18sp"
                        android:id="@+id/civilexplore"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#ffd600"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/automobile"
                        android:textColor="#000000"
                        android:textSize="25sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundbutton"
                        android:text="@string/explore"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"
                        android:textSize="18sp"
                        android:id="@+id/autoexplore"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#f57c00"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/Mba"
                        android:textColor="#000000"
                        android:textSize="25sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundbutton"
                        android:text="@string/explore"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"
                        android:textSize="18sp"
                        android:id="@+id/mbaexplore"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="#00bfa5"
                app:cardCornerRadius="5dp"
                app:cardElevation="10dp"
                tools:targetApi="lollipop">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="20dp"
                        android:layout_marginTop="20dp"
                        android:fontFamily="@font/montserrat_alternates"
                        android:gravity="center"
                        android:text="@string/me"
                        android:textColor="#000000"
                        android:textSize="25sp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/roundbutton"
                        android:text="@string/explore"
                        android:textColor="#ffffff"
                        android:textAllCaps="false"
                        android:fontFamily="@font/montserrat"
                        android:textSize="18sp"
                        android:id="@+id/meexplore"/>


                </LinearLayout>



            </android.support.v7.widget.CardView>
            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>